[gd_scene load_steps=10 format=3 uid="uid://cahiama0ilcyn"]

[ext_resource type="Script" path="res://Scripts/MainScenes/UI/options.gd" id="1_ulvhm"]
[ext_resource type="Shader" path="res://Assets/Godot/Shader/pause.gdshader" id="2_mtuwk"]
[ext_resource type="PackedScene" uid="uid://ca8rarr1ftfjk" path="res://Scenes/MainScenes/UI/Button.tscn" id="3_hdaf4"]
[ext_resource type="Texture2D" uid="uid://dmst0o18k1gdg" path="res://Assets/Photos/Misc/displayIcon.png" id="4_djvl6"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_brokb"]
shader = ExtResource("2_mtuwk")
shader_parameter/amount = 3.5

[sub_resource type="Animation" id="Animation_f8gqs"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SidePanel/Selection:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(176, 422.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Content:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(851.999, 0)]
}

[sub_resource type="Animation" id="Animation_7ycb0"]
resource_name = "enter"
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SidePanel/Selection:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.25, 1),
"update": 0,
"values": [Vector2(-627, 422.5), Vector2(176, 422.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Content:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.25, 1),
"update": 0,
"values": [Vector2(2594, 0), Vector2(851.999, 0)]
}

[sub_resource type="Animation" id="Animation_p0qp3"]
resource_name = "exit"
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SidePanel/Selection:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.25, 1),
"update": 0,
"values": [Vector2(176, 422.5), Vector2(-627, 422.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Content:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.25, 1),
"update": 0,
"values": [Vector2(852.001, 0), Vector2(2594, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y3qfx"]
_data = {
"RESET": SubResource("Animation_f8gqs"),
"enter": SubResource("Animation_7ycb0"),
"exit": SubResource("Animation_p0qp3")
}

[node name="options" type="CanvasLayer"]
process_mode = 3
layer = 11
script = ExtResource("1_ulvhm")
hasPanelParent = true

[node name="ScreenBlur" type="ColorRect" parent="."]
process_mode = 3
material = SubResource("ShaderMaterial_brokb")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScreenPanel" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="Content" type="Control" parent="."]
layout_mode = 3
anchor_left = 0.332812
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1741.98
offset_right = 1741.98
grow_horizontal = 0
grow_vertical = 2

[node name="Graphics" type="Control" parent="Content"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ShowFPS" parent="Content/Graphics" instance=ExtResource("3_hdaf4")]
layout_mode = 1
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 158.0
offset_top = 145.0
offset_right = 552.0
offset_bottom = 313.0
grow_horizontal = 1
grow_vertical = 1
focus_neighbor_left = NodePath("../../../SidePanel/Selection/graphics")
theme_override_font_sizes/font_size = 80
text = "Show FPS:
ON"

[node name="SidePanel" type="ColorRect" parent="."]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1708.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.25)

[node name="Selection" type="VBoxContainer" parent="SidePanel"]
process_mode = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1053.0
offset_top = -297.5
offset_right = -552.999
offset_bottom = 426.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="general" parent="SidePanel/Selection" instance=ExtResource("3_hdaf4")]
process_mode = 3
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 70
disabled = true
text = "GENERAL"

[node name="audio" parent="SidePanel/Selection" instance=ExtResource("3_hdaf4")]
process_mode = 3
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 70
disabled = true
text = "AUDIO"

[node name="graphics" parent="SidePanel/Selection" instance=ExtResource("3_hdaf4")]
process_mode = 3
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
focus_neighbor_right = NodePath("../../../Content/Graphics/ShowFPS")
theme_override_font_sizes/font_size = 70
text = "GRAPHICS"
_customArrowTexture = ExtResource("4_djvl6")
focusColor = Color(0.846769, 0.642761, 1, 1)

[node name="controls" parent="SidePanel/Selection" instance=ExtResource("3_hdaf4")]
process_mode = 3
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 70
disabled = true
text = "CONTROLS"
focusColor = Color(0.563656, 0.346771, 0.980392, 1)

[node name="debug" parent="SidePanel/Selection" instance=ExtResource("3_hdaf4")]
process_mode = 3
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 70
disabled = true
text = "DEBUG"

[node name="back" parent="SidePanel/Selection" instance=ExtResource("3_hdaf4")]
process_mode = 3
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 70
text = "BACK"

[node name="Anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_y3qfx")
}

[connection signal="focus_entered" from="Content/Graphics/ShowFPS" to="." method="graphicsFocused"]
[connection signal="pressed" from="Content/Graphics/ShowFPS" to="." method="showFPS"]
[connection signal="focus_entered" from="SidePanel/Selection/graphics" to="." method="graphicsFocused"]
[connection signal="focus_exited" from="SidePanel/Selection/graphics" to="." method="graphicsUnFocused"]
[connection signal="pressed" from="SidePanel/Selection/graphics" to="." method="graphicsPressed"]
[connection signal="pressed" from="SidePanel/Selection/back" to="." method="_back"]
